json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,103 @@
 {
  "items": [
   {
+    "id": "0eRagA4JTdeUE__9jcWUTw",
+    "url": "https://remoteok.io/jobs/67791",
+    "title": "IOS Software Engineer",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``3N( 2N(work,remot), OR(us,across,globe,world,planet,100,set 3W hour) )",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:layout/frontend/5",
+      "DBG_TECH1:k/t/w:node.js/nodejs/13",
+      "DBG_TECH1:k/t/w:swift/apple/10",
+      "DBG_TECH1:k/t/w:swift/mobile/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=22, go=0, nodejs=13, bigdata-ml=0, ruby=0, apple=16, java=0, gamedev=0, php=0, embedded=0, frontend=5}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 29, 2018 3:42:13 AM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<td><a rel='nofollow'><h2>iOS Software Engineer</h2></a><br><a rel='nofollow'><h3>Universe</h3></a></td><div><div><br>Build tools that empower and delight.<br><br>We believe that the web is better when more people are making it. Universe is built to empower everyone to create their own home on the internet.<br><br>We're looking for an iOS developer to help accelerate our mission. You'll take on tasks throughout the stack. You will expand the editor: adding new block types, more complex layouts, and more customizations for each block. You will help build tools that are easy for everyone to understand, so that buying a domain, setting up metadata, and adding pages are super simple. And you will advance our Magic Builder, a personalized design “assistant” that generates a unique site by asking you just a few questions. <br><br>Our app is native, taking advantage of the many frameworks Apple gives us. It is built entirely with Swift. The bulk of the user data is stored in CloudKit though we do maintain a few of our own APIs. We're hoping to convert those APIs from node.js to Swift soon, so experience with Vapor or Kitura is a bonus ;). We use programatic autolayout for the majority of our UI. We do believe in Unit Tests, but we don't have enough yet.<br><br>This is a full time position and 100% remote. Experience working remotely is definitely a bonus. We offer health benefits and generous vacation because everyone needs to recharge their batteries.<br><br>We're looking for someone sharp, internally-driven, and passionate about building powerful tools for everyone.&nbsp;<p>See more jobs at <a rel='nofollow'>Universe</a></p></div></div>"
+  },
+  {
+    "id": "21aN9dcoRpql3owVeHOC3g",
+    "url": "https://angel.co/lookfwd/jobs/95055-chief-technical-officer-co-founder",
+    "title": "Chief Technical Officer (Co-Founder)",
+    "tags": [
+      "Berkeley",
+      "Cofounder",
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG_TECH1:k/t/w:c/c/5",
+      "DBG_TECH1:k/t/w:ios/apple/4",
+      "DBG_TECH1:k/t/w:ios/mobile/4",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=7, mobile=28, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=20, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "Full Stack Development",
+      "Mobile Developer",
+      "REMOTE1/50",
+      "Remote OK",
+      "San Francisco",
+      "Swift/Objective C/iOS/Xcode",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown",
+      "iOS Development"
+    ],
+    "tagsNames1": [
+      "50% remote"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "USD",
+      "minValue": 0,
+      "maxValue": 80000,
+      "info": "25.0% – 40.0%",
+      "unit": "YEAR",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 20, 2018 8:30:45 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div><h2>Chief Technical Officer (Co-Founder) at LookFwd</h2><div>San Francisco, Berkeley, Remote · Cofounder</div><div></div></div><div><div>Skills</div><div>iOS Development, Full Stack Development, Swift/Objective C/iOS/Xcode</div><div>Compensation</div><div>$0K–$80K<br>25.0%–40.0%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>LookFwd let's you see friends' upcoming trips, chat about meeting up, recommendations and more! Think Twitter for trips! After scaling to thousands of users we are seeking a CTO (Co-Founder) to help us scale to millions of users.</p><p>Check us out!: <a href='https://itunes.apple.com/us/app/lookfwd/id1117424939?mt=8' rel='nofollow'>https://itunes.apple.com/us/app/lookfwd/id1117424939?mt=8</a></p><p>ABOUT US<br>- Invited to YC for final round interview last batch - top 7% of all startups that applied (Re-applying to next YC Batch)<br>- Pre-Seed Funding by Founder<br>- Thousands of active users- growing exponentially<br>- Rockstar UX, Marketing, Analytics, and Business Development team<br>- Completed the Berkeley SkyDeck Accelerator  </p><p>TEAM: <br>- Founder/CEO - PwC Technical Project Manager<br>- PM - Engineer at Apple<br>- UX/UI - Mobile Engineer at Progressly <br>- CMO - Consumer Marketing at Vine</p><p>REQUIREMENTS:<br>- Capable of being LookFwd's CTO and scaling the current LookFwd mobile application<br>- Highly productive, opinionated programmer with great product sense<br>- Excited to become a Co-Founder and work in an equity capacity<br>- Experience scaling a mobile application is a plus<br>- Currently located in the San Fransisco bay area or willing to move to upon raising our seed round</p><p>BENEFITS:<br>- Substantial Equity Compensation in a growing startup<br>- Ability to work remotely<br>- Flexible Schedule<br>- Work alongside talented team</p><p>About LookFwd:</p><p>LookFwd is a Berkeley-based startup that was started at the Haas School of Business, and as such has significant resources available to it as it continues to grow. LookFwd currently has multiple mentors including a former Yahoo VP Media Executive and a Y-Combinator Alumnus.</p></div>"
+  },
+  {
     "id": "RV4EHpPnQnmAuf3nHOYI0A",
     "url": "https://angel.co/stop-breathe-think-pbc/jobs/139879-ios-engineer",
     "title": "iOS Engineer",
