json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,43 @@
 {
  "items": [
   {
+    "id": "4ieYCpk8TEyBgBx9-dVyYg",
+    "url": "https://www.remoteage.com/remote-jobs/freelance-expert-interviewer-karat/",
+    "title": "Freelance Expert Interviewer",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=2, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 2, 2018 12:29:03 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<h2> Freelance Expert Interviewer</h2><div>Worldwide</div><div>Company: Karat<p></p></div><div>CONTRACT</div><div><h3>Overview</h3><p>Karat has reengineered technical hiring to ensure that great talent gets noticed by great companies. &nbsp;&nbsp;We augment engineering organizations by conducting the first-rounds of technical interviews on their behalf. Our service saves material engineering time and drives a highly responsive and consistent experience for candidates. &nbsp;Karat continuously invests in cutting edge interview methodologies with an aim of reducing bias and letting candidates demonstrate their true ability.</p><p>We operate as strategic partners for engineering leaders at the world’s leading technology companies including Jet, MuleSoft, Roblox, Intuit, Ten-X, Minted and many more. &nbsp;&nbsp;As the gold standard of technical interviewing, our well-funded company is scaling quickly to meet our growing list of client’s needs. &nbsp;Come join us!</p><h2><b>Join our community of Expert Interviewers.</b></h2><p>Karat’s Expert Interviewers are recognized and rewarded for doing a first-class job as top assessors of technical talent. Every interviewer in the network is an accomplished engineer. &nbsp;Our interviewers include development managers, start-up engineers and freelancers covering the full technology stack.</p><h2><b>Flexible, high impact work that is compensated at highly competitive rates.</b></h2><p>As an Expert Interviewer, you will be compensated at highly competitive rates for your interviewing expertise. &nbsp;The time commitment is flexible—many of our interviews happen on nights and weekends. &nbsp;Some experts do 10 interviews/week while others do over 25 interviews/week. &nbsp;You can work from anywhere, anytime. &nbsp;You will sharpen your interviewing skills and transform the interviewing experience for every candidate and company.</p><h2><strong>Who are we looking for?</strong></h2><ul><li>We are looking for experienced software engineers who believe that interviewing is a first-class job. You should possess:</li><li>Interviewing experience focused on evaluating fundamental computer science skills (i.e. data structures, algorithms etc.), software craftsmanship (i.e. understanding of unit testing, source control, APIs etc.), and/or specific technologies (i.e. iOS, distributed systems etc.).</li><li>Strong oral and written communication skills. Able to empathize with candidates and provide actionable feedback.</li><li>An ability to structure your schedule (i.e. you can pick certain blocks of time during the day, evenings, weekends).</li><li>A genuine desire to continuously improve the Karat service and technical interviewing.</li></ul><p><em><b>Please note that due to the overwhelming interest in this role our response to your application may be delayed.</b>&nbsp;</em></p><p></p><p></p><p></p><div> <a href='https://jobs.lever.co/karat/d44ab283-c7c0-4bbd-b8c3-4dc0ced64c86/apply' rel='nofollow'>Apply for job</a></div></div>"
+  },
+  {
     "id": "FGlMIArcQJm3dcQ9lnxoHA",
     "url": "http://jobmote.com/jobs/15179-expert-interviewer",
     "title": "Expert Interviewer",
@@ -741,43 +778,6 @@
     "published": "May 11, 2018 6:24:05 PM",
     "validThrough": "Jan 1, 1970 3:00:00 AM",
     "content": "<div><h2>Software Engineer- iOS at GetOnDemand</h2><div>Mountain View, Remote · Full Time</div><div></div></div><div><div>Compensation</div><div>$10K–$20K<br>0.1%–0.2%</div><div>Visa Sponsorship</div><div>Available</div></div><h3>Job Description</h3><div><p>Can work with extensive chatting infrastructure</p></div>"
-  },
-  {
-    "id": "-RL8XqfvQl6e52TYR1JukA",
-    "url": "https://news.ycombinator.com/item?id=16997855",
-    "title": "VipVR | iOS Engineer | FULL-TIME | New York, NY | REMOTE ok, NYC preferred",
-    "tags": [
-      "DBG:surround``remot W OR(contractor,assist,ok)",
-      "DBG_TECH1:k/t/w:ios/apple/16",
-      "DBG_TECH1:k/t/w:ios/mobile/16",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=16, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=16, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "USD",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "May 4, 2018 11:10:06 PM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "<div>                  <span>VipVR | iOS Engineer | FULL-TIME | New York, NY | REMOTE ok, NYC preferred<p>VipVR is looking to enhance the music industry by giving artists a way to personally connect with their fans, while incentivizing and rewarding online engagement. Our team is made up of music industry veterans and former McKinsey consultants, with combined experience managing 10+ successful music artists and advising 10+ fast-growing startups.</p><p>We’re currently building out our engineering team, led by a former Facebook engineer and entrepreneur, and are looking for a strong iOS developer to join us in our mission. This role is for experienced developers who can build a user interface on iOS and be responsible for a fully finished product.</p><p>You will:</p><p>- Define and implement engineering goals for iOS development</p><p>- Build a high-quality native iOS app</p><p>- Iterate efficiently on designs and features that increase engagement with users</p><p>About you:</p><p>- 2+ years of experience developing for the iOS platform</p><p>- Design and UX expertise</p><p>- Strong communication skills</p><p>- Experience with Apple's Approval &amp; Distribution process</p><p>- Experience in a fast-paced startup environment preferred</p><p>- Excellent iOS development skills, and commitment to engineering principles</p><p>- Ability to architect engineering projects</p><p>- Passion for building quality gamified communication apps</p><p>- Can work well in a small team environment and is self-motivated</p><p>Apply:  Email pranav@vipvrapp.com<span>              </span></p><div>        <p>                      <u></u>                        </p></div></span></div>"
   }
 ]
 }
