--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,45 @@
 {
  "items": [
   {
+    "id": "PpzIiFbCTYi7DoRv-M0XZQ",
+    "url": "https://stackoverflow.com/jobs/153505/ios-developer-freelance-and-or-remote-job-nearit?a=PtOfW7ADPoY",
+    "title": "iOS Developer - freelance and/or remote job at NearIT (Bergamo, Italy) ",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:ios/apple/4",
+      "DBG_TECH1:k/t/w:ios/mobile/4",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=6, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=4, java=1, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 7, 2018 4:00:11 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "                    <h2>About this job</h2>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Full-time</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Mid-Level</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Mobile Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Computer Software, Mobile, Proximity Marketing</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>11-50 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Public</span>                                    </div>                            </div>                    </div>                <h2>Remote details</h2>                    <h2>Technologies</h2>                    <div>                        <span>ios</span><span>objective-c</span><span>swift</span>                    </div>                            <h2>About NearIT</h2>            <div><p>Italy-based tech start up, NearIT designed a platform to create proximity marketing campaigns easier and faster. NearIT SDK can be quickly integrated in mobile native apps (iOS and Android). With its web interface sending context-aware targeted content has never been easier. It is possible to create and send push notifications, multimedia messages, mobile coupons and analyze the results of the triggered campaigns.</p>            </div>                            <h2>Benefits</h2>                    <ul>                            <li>                                <span></span>                                <span>Excellent compensation</span>                            </li>                            <li>                                <span></span>                                <span>World-class benefits</span>                            </li>                            <li>                                <span></span>                                <span>Close to the airport</span>                            </li>                            <li>                                <span></span>                                <span>Birthday croissant for all the team</span>                            </li>                            <li>                                <span></span>                                <span>Flexible working hours</span>                            </li>                    </ul>                "
+  },
+  {
     "id": "SIPZXE0yRH6VfrBllqXwcg",
     "url": "https://stackoverflow.com/jobs/196023/android-engineer-x-mode-social?a=13JSGY2qvbLa",
     "title": "Android Engineer at X-Mode Social (Sterling, VA) (allows remote)",
@@ -402,43 +441,6 @@
     "content": "<p>Part-time</p><p><strong>(Anywhere)</strong> </p><div><div><span>Interviewing is broken. &nbsp;Karat professionalizes interviewing.</span></div><div><span>About Karat</span></div><div><span>Karat has reengineered technical hiring to ensure that great talent gets noticed by great companies. &nbsp;&nbsp;We augment engineering organizations by conducting the first-rounds of technical interviews on their behalf. Our service saves material engineering time and drives a highly responsive and consistent experience for candidates. &nbsp;Karat continuously invests in cutting edge interview methodologies with an aim of reducing bias and letting candidates demonstrate their true ability.</span></div><div><span>We operate as strategic partners for engineering leaders at the world's leading technology companies including Jet, MuleSoft, Roblox, Intuit, Ten-X, Minted and many more. &nbsp;&nbsp;As the gold standard of technical interviewing, our well-funded company is scaling quickly to meet our growing list of client's needs. &nbsp;Come join us!</span></div><div><span>Join our community of Expert Interviewers.</span></div><div><span>Karat’s Expert Interviewers are recognized and rewarded for doing a first-class job as top assessors of technical talent. Every interviewer in the network is an accomplished engineer. &nbsp;Our interviewers include development managers, start-up engineers and freelancers covering the full technology stack.</span></div><div><span>Flexible, high impact work that is compensated at highly competitive rates.</span></div><div><span>As an Expert Interviewer, you will be compensated at highly competitive rates for your interviewing expertise. &nbsp;The time commitment is flexible---many of our interviews happen on nights and weekends. &nbsp;Some experts do 10 interviews/week (Our minimum requirement) while others do over 25 interviews/week. &nbsp;You can work from anywhere, anytime. 20hrs of paid training will be provided and you'll be compensated a flat rate of $100 per interview.&nbsp; You will sharpen your interviewing skills and transform the interviewing experience for every candidate and company.&nbsp;</span></div><div><strong><span>Who are we looking for?</span></strong></div></div><div><div><ul><ul><li>We are looking for experienced software engineers who believe that interviewing is a first-class job. You should possess:</li><li>Interviewing experience focused on evaluating fundamental computer science skills (i.e. data structures, algorithms etc.), software craftsmanship (i.e. understanding of unit testing, source control, APIs etc.), and/or specific technologies (i.e. iOS, distributed systems etc.).</li><li>Strong oral and written communication skills. Able to empathize with candidates and provide actionable feedback.</li><li>An ability to structure your schedule (i.e. you can pick certain blocks of time during the day, evenings, weekends).</li><li>A genuine desire to continuously improve the Karat service and technical interviewing.</li></ul></ul></div></div><p></p><p><strong>Apply:</strong> </p>"
   },
   {
-    "id": "7_Gv9XgTRaie5GhN6JoY4A",
-    "url": "https://jobspresso.co/job/karat-expert-interviewer-2/",
-    "title": "Technical Hiring Interviewer",
-    "tags": [
-      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
-      "DBG_TECH1:k/t/w:ios/apple/2",
-      "DBG_TECH1:k/t/w:ios/mobile/2",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=2, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
-      "REMOTE1/100",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Jul 1, 2018 6:20:57 PM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "<h2> Technical Hiring Interviewer</h2><div>Developer<br></div><div>Anywhere<br></div><div>$100 per interview<br></div><div>Company: Karat<br></div><div>FreelancePart Time<br></div><h3>Overview</h3><p>Karat has reengineered technical hiring to ensure that great talent gets noticed by great companies. &nbsp;&nbsp;We augment engineering organizations by conducting the first-rounds of technical interviews on their behalf. Our service saves material engineering time and drives a highly responsive and consistent experience for candidates. &nbsp;Karat continuously invests in cutting edge interview methodologies with an aim of reducing bias and letting candidates demonstrate their true ability.</p><p>We operate as strategic partners for engineering leaders at the world’s leading technology companies including Jet, MuleSoft, Roblox, Intuit, Ten-X, Minted and many more. &nbsp;&nbsp;As the gold standard of technical interviewing, our well-funded company is scaling quickly to meet our growing list of client’s needs. &nbsp;Come join us!</p><p></p><strong>Join our community of Expert Interviewers.</strong><p>Karat’s Expert Interviewers are recognized and rewarded for doing a first-class job as top assessors of technical talent. Every interviewer in the network is an accomplished engineer. &nbsp;Our interviewers include development managers, start-up engineers and freelancers covering the full technology stack.</p><p>Flexible, high impact work that is compensated at highly competitive rates.</p><p>As an Expert Interviewer, you will be compensated at highly competitive rates for your interviewing expertise. &nbsp;The time commitment is flexible—many of our interviews happen on nights and weekends. &nbsp;Some experts do 10 interviews/week (our minimum requirement) while others do over 25 interviews/week. &nbsp;You can work from anywhere, anytime. &nbsp;You will sharpen your interviewing skills and transform the interviewing experience for every candidate and company.</p><p></p><strong>Who are we looking for?</strong><p>We are looking for experienced software engineers who believe that interviewing is a first-class job. You should possess:</p><ul></ul><li>Interviewing experience focused on evaluating fundamental computer science skills (i.e. data structures, algorithms etc.), software craftsmanship (i.e. understanding of unit testing, source control, APIs etc.), and/or specific technologies (i.e. iOS, distributed systems etc.).</li><li>Strong oral and written communication skills.</li><li>Able to empathize with candidates and provide actionable feedback.</li><li>An ability to structure your schedule (i.e. you can pick certain blocks of time during the day, evenings, weekends).</li><li>A genuine desire to continuously improve the Karat service and technical interviewing.</li><p>Please note that due to the overwhelming interest in this role our response to your application may be delayed.&nbsp;Interested? Apply below to learn more and connect with the Karat Team.</p><div> <div><div><p>To apply for this job please visit the following URL: <a href='https://jobs.lever.co/karat/d44ab283-c7c0-4bbd-b8c3-4dc0ced64c86/apply?lever-origin=applied&amp;lever-source=Jobspresso' rel='nofollow'>https://jobs.lever.co/karat/d44ab283-c7c0-4bbd-b8c3-4dc0ced64c86/apply?lever-origin=applied&amp;lever-source=Jobspresso →</a></p></div></div></div>"
-  },
-  {
     "id": "dyQHYf9bQZaK3qgk160TJA",
     "url": "https://stackoverflow.com/jobs/195634/ios-software-engineer-universe?a=13BNd2T27N4Y",
     "title": "iOS Software Engineer at Universe (Brooklyn, NY) ",
@@ -521,61 +523,6 @@
     "published": "Jun 29, 2018 3:42:13 AM",
     "validThrough": "Jan 1, 1970 3:00:00 AM",
     "content": "<td><a rel='nofollow'><h2>iOS Software Engineer</h2></a><br><a rel='nofollow'><h3>Universe</h3></a></td><div><div><br>Build tools that empower and delight.<br><br>We believe that the web is better when more people are making it. Universe is built to empower everyone to create their own home on the internet.<br><br>We're looking for an iOS developer to help accelerate our mission. You'll take on tasks throughout the stack. You will expand the editor: adding new block types, more complex layouts, and more customizations for each block. You will help build tools that are easy for everyone to understand, so that buying a domain, setting up metadata, and adding pages are super simple. And you will advance our Magic Builder, a personalized design “assistant” that generates a unique site by asking you just a few questions. <br><br>Our app is native, taking advantage of the many frameworks Apple gives us. It is built entirely with Swift. The bulk of the user data is stored in CloudKit though we do maintain a few of our own APIs. We're hoping to convert those APIs from node.js to Swift soon, so experience with Vapor or Kitura is a bonus ;). We use programatic autolayout for the majority of our UI. We do believe in Unit Tests, but we don't have enough yet.<br><br>This is a full time position and 100% remote. Experience working remotely is definitely a bonus. We offer health benefits and generous vacation because everyone needs to recharge their batteries.<br><br>We're looking for someone sharp, internally-driven, and passionate about building powerful tools for everyone.&nbsp;<p>See more jobs at <a rel='nofollow'>Universe</a></p></div></div>"
-  },
-  {
-    "id": "21aN9dcoRpql3owVeHOC3g",
-    "url": "https://angel.co/lookfwd/jobs/95055-chief-technical-officer-co-founder",
-    "title": "Chief Technical Officer (Co-Founder)",
-    "tags": [
-      "Berkeley",
-      "Cofounder",
-      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
-      "DBG_TECH1:k/t/w:c/c/5",
-      "DBG_TECH1:k/t/w:ios/apple/4",
-      "DBG_TECH1:k/t/w:ios/mobile/4",
-      "DBG_TECH1:k/t/w:objective-c/apple/3",
-      "DBG_TECH1:k/t/w:objective-c/c/2",
-      "DBG_TECH1:k/t/w:objective-c/mobile/8",
-      "DBG_TECH1:k/t/w:swift/apple/5",
-      "DBG_TECH1:k/t/w:swift/mobile/8",
-      "DBG_TECH1:k/t/w:xcode/apple/8",
-      "DBG_TECH1:k/t/w:xcode/mobile/8",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=7, mobile=28, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=20, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
-      "Full Stack Development",
-      "Mobile Developer",
-      "REMOTE1/50",
-      "Remote OK",
-      "San Francisco",
-      "Swift/Objective C/iOS/Xcode",
-      "TECH1/apple",
-      "TECH1/mobile",
-      "TITLE1/dev",
-      "TZ/unknown",
-      "iOS Development"
-    ],
-    "tagsNames1": [
-      "50% remote"
-    ],
-    "tagsNames2": [
-      "apple",
-      "mobile"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "USD",
-      "minValue": 0,
-      "maxValue": 80000,
-      "info": "25.0% – 40.0%",
-      "unit": "YEAR",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Jun 20, 2018 8:30:45 PM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "<div><h2>Chief Technical Officer (Co-Founder) at LookFwd</h2><div>San Francisco, Berkeley, Remote · Cofounder</div><div></div></div><div><div>Skills</div><div>iOS Development, Full Stack Development, Swift/Objective C/iOS/Xcode</div><div>Compensation</div><div>$0K–$80K<br>25.0%–40.0%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>LookFwd let's you see friends' upcoming trips, chat about meeting up, recommendations and more! Think Twitter for trips! After scaling to thousands of users we are seeking a CTO (Co-Founder) to help us scale to millions of users.</p><p>Check us out!: <a href='https://itunes.apple.com/us/app/lookfwd/id1117424939?mt=8' rel='nofollow'>https://itunes.apple.com/us/app/lookfwd/id1117424939?mt=8</a></p><p>ABOUT US<br>- Invited to YC for final round interview last batch - top 7% of all startups that applied (Re-applying to next YC Batch)<br>- Pre-Seed Funding by Founder<br>- Thousands of active users- growing exponentially<br>- Rockstar UX, Marketing, Analytics, and Business Development team<br>- Completed the Berkeley SkyDeck Accelerator  </p><p>TEAM: <br>- Founder/CEO - PwC Technical Project Manager<br>- PM - Engineer at Apple<br>- UX/UI - Mobile Engineer at Progressly <br>- CMO - Consumer Marketing at Vine</p><p>REQUIREMENTS:<br>- Capable of being LookFwd's CTO and scaling the current LookFwd mobile application<br>- Highly productive, opinionated programmer with great product sense<br>- Excited to become a Co-Founder and work in an equity capacity<br>- Experience scaling a mobile application is a plus<br>- Currently located in the San Fransisco bay area or willing to move to upon raising our seed round</p><p>BENEFITS:<br>- Substantial Equity Compensation in a growing startup<br>- Ability to work remotely<br>- Flexible Schedule<br>- Work alongside talented team</p><p>About LookFwd:</p><p>LookFwd is a Berkeley-based startup that was started at the Haas School of Business, and as such has significant resources available to it as it continues to grow. LookFwd currently has multiple mentors including a former Yahoo VP Media Executive and a Y-Combinator Alumnus.</p></div>"
   },
   {
     "id": "RV4EHpPnQnmAuf3nHOYI0A",
