--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,153 @@
 {
  "items": [
   {
+    "id": "P4ZWZdEqSbutZkgXxjSHKg",
+    "url": "https://weworkremotely.com/remote-jobs/x-team-ios-developer-1",
+    "title": "X-Team: iOS Developer",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:css/frontend/3",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:javascript/frontend/1",
+      "DBG_TECH1:k/t/w:javascript/nodejs/1",
+      "DBG_TECH1:k/t/w:node.js/nodejs/13",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:php/php/5",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=31, go=3, nodejs=14, bigdata-ml=0, ruby=0, apple=22, java=2, gamedev=0, php=5, embedded=0, frontend=4}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 10, 2018 2:32:24 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<h2>iOS Developer</h2><span>Company: X-Team<br></span><span>Headquarters: Remote<br></span><span>https://x-team.com/remote-ios-developer-jobs/?utm_source=weworkremotely&amp;utm_medium=board<br><br></span>  <div>    <div><b>About X-Team</b></div><div><br></div><div>X-Team is an international company founded in Melbourne, Australia, that helps companies scale their development teams by providing them with extraordinary teams of developers from around the world.</div><div><br></div><div><b>We are 100% remote and believe in building a world where developers can have access to an environment of growth and incredible opportunities regardless of where they live.</b></div><div><br></div><div>We are also a community of people dedicated to unleashing our potential. We’ve fostered a unique, active lifestyle and culture around this idea that continues to attract thousands of developers to apply every day.</div><div><br></div><div>We proactively support our developers, fund their learning and growth, connect them in roaming hacker housesaround the world, and give them a remote environment that motivates and inspires them on a daily basis. While other companies merely place and drop their talent, we provide unified teams of developers centered around the same beliefs, values, and lifestyle.&nbsp;</div><div><br></div><div>We're uniquely situated to help shape how companies grow their businesses in the digital age and aid them in being able to do so properly with the right people. We work with big brands like Riot Games, Fox Broadcasting, Kaplan Inc., Coinbase, Google, Twitter and more…</div><div><br></div><div><b>About You:</b></div><ul><li>3+ years of experience in mobile iOS Development<br></li><li>Experience with Objective-C, CSS, Javascript, HTML<br></li><li>Experience with JSON, XML, SOAP, REST<br></li><li>Experience with server side technologies (Java, NodeJS, PHP)<br></li><li>Experience storing and indexing data<br></li><li>Knowledge of Swift and Xcode a plus<br></li><li>Code optimization and performance improvements<br></li><li>Write well designed, testable, efficient code</li></ul><div><br></div><div><b>Nice to have:</b></div><ul><li>Experience with working remotely<br></li><li>Familiar/involved with open­ source projects</li></ul><div><br></div><div><b>Personal:</b></div><ul><li>Independent, self-motivated<br></li><li>Fluent in English, written and spoken<br></li><li>Proven track record of always learning and growing<br></li><li>Proactive attitude<br></li><li>Possess a spirit of generosity</li></ul><div><br></div><div><b>Perks:</b></div><ul><li>Get the chance to work with big brands like Riot Games, Fox, Kaplan, Coinbase..&nbsp;<br></li><li>Live and work in one of our roaming hacker houses (X-Outposts) around the world.<br></li><li>Work from anywhere as part of a community of digital nomads.<br></li><li>Join our vibrant community, filled with opportunities to learn new skills together in study groups, join clubs (photography, gaming, etc.) and get free camera equipment/games/conferences/courses/massages/etc., charitable fundraisers, fitness &amp; yoga programs (+gym membership), etc. This is the community to be in if you're a remote developer.<br></li><li>We’ll provide up to $2,500 in funding for your learning and growth through our Unleash program, which provides opportunities to unleash your potential through initiatives that help you grow as a developer and explore your passions more each day.&nbsp;</li></ul><div><br></div><div><b>Who is X-Team meant for?</b></div><div><br></div><div>A potential X-Teamer is a freelance developer with experience working on large-scale, remote teams and projects. They are self-motivated, proactive, and have a strong team spirit. If you're tired of the traditional freelancing platforms, you'll be happy to hear that we’re so much more. X-Team is a community of like-minded individuals, carefully chosen to ensure that they can become part of the community of the most motivated people in the world who come together to unleash their potential. What we've created is truly special and not merely a faceless platform. X-Team is where developers go to feel truly at home together while becoming more motivated than they've ever been.</div><div><br></div><div><b>How long does your vetting/interview process take?</b></div><div><br></div><div>It varies depending on our immediate needs and how quickly you respond to our questions and requests. On average, it takes 1-3 weeks.</div><div><br></div><div>More importantly though, after a decade of interviewing developers, we've learned how important it is to respect people's time. We will only ever ask for more of your time if we think you are a potentially good fit, rather than waste your time having you jump through unnecessary hoops.</div>  </div>  <div>    <h4>Apply for this position</h4>    <p><a href='https://x-team.com/remote-ios-developer-jobs/?utm_source=weworkremotely&amp;utm_medium=board' rel='nofollow'>https://x-team.com/remote-ios-developer-jobs/?utm_source=weworkremotely&amp;utm_medium=board</a></p>  </div>"
+  },
+  {
+    "id": "cumHLZl4TH65vqXYni9RFQ",
+    "url": "http://jobmote.com/jobs/16387-ios-developer-start-up-remote",
+    "title": "iOS Developer - Start-up - Remote",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=6, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=6, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 10, 2018 11:20:55 AM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p><strong>iOS Developer - Start-up - Remote - £50k - £70k DOE</strong><br>My client is an exciting start-up in the mobile space. They have begun their search for a talented iOS Developer to join their growing team. This opportunity offers the flexibility of remote working. Their product offering is a fast growing video based application..... click apply for full job details </p></div></div><div></div></div></div>"
+  },
+  {
+    "id": "_SqP6BTOQ-C6qTGXgnGb_w",
+    "url": "https://remote.com/jobs/browse/preview/experienced-ios-developer-required",
+    "title": "Experienced iOS Developer Required",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:ajax/frontend/3",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:animation/gamedev/8",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:core-data/apple/8",
+      "DBG_TECH1:k/t/w:html5/frontend/5",
+      "DBG_TECH1:k/t/w:ios/apple/22",
+      "DBG_TECH1:k/t/w:ios/mobile/22",
+      "DBG_TECH1:k/t/w:javascript/frontend/1",
+      "DBG_TECH1:k/t/w:javascript/nodejs/1",
+      "DBG_TECH1:k/t/w:jquery/frontend/8",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:php/php/5",
+      "DBG_TECH1:k/t/w:sql-server/dotnet/1",
+      "DBG_TECH1:k/t/w:swift/apple/15",
+      "DBG_TECH1:k/t/w:swift/mobile/24",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=1, c=2, mobile=64, go=0, nodejs=1, bigdata-ml=0, ruby=0, apple=64, java=1, gamedev=8, php=5, embedded=0, frontend=17}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 9, 2018 8:06:04 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "JOB TYPE: Full time<br /><br />LOCATION:<br />Remote<br />Anywhere in<br />Egypt<br /><br />EXPERIENCE: intermediate<br /><br />COMPANY: Direct Travel; 10-50 employees; 0-25% remote;<br /><br />SKILLS:<br />• SMS Gateways<br />• iOS development<br />• Apple<br />• Web Services API<br />• RESTful<br />• Xcode<br />• Databases<br />• iOS<br />• UX/UI<br />• Cocoa<br />• JSON<br />• Payment Gateways<br />• Swift<br />• SOAP<br /><br />We are looking for Lead Senior iOS Developer to take control of our iOS Development Department.<br />Job Location: Egypt<br /><br />Responsibilities in iOS Department:<br /><br />-    Translate designs and wireframes into high quality code<br />-    Design, build, and maintain high performance, reusable, and reliable code<br />-    Ensure the best possible performance, quality, and responsiveness of the application<br />-    Identify and correct bottlenecks and fix bugs<br />-    Help maintain code quality, organization, and automatization<br />-    Keep updated with latest mobile-related technologies with a particular focus on iOS<br />-    Comply with project plans and deadlines<br />-    Working along the web developers to create and maintain a robust framework to support the apps<br /><br />Technical Requirements:<br /><br />-    3-5+ years of experience in iOS Development specifically for Swift.<br />-    Experience of working in RTL/Arabic apps (solving RTL responsiveness, text validation etc. issues). <br />-    Proficient with Objective-C and Swift. <br />-    Proficient understanding of code versioning tools, such as Git or SVN<br />-    Familiarity with Payment gateways and SMS gateways integration<br />-    Familiarity with cloud message APIs and push notifications<br />-    Experience with iOS frameworks such as Core Data, Core Animation, etc.<br />-    Experience with offline storage, threading, and performance tuning<br />-    Experience with web service integration (SOAP, REST, JSON, XML) to connect iOS applications to back-end services<br />-    Experience implementing third-party SDKs on iOS (AR, Social Media, Marketing/Crash Analytics, etc.)<br />-    Knowledge of other web technologies and UI/UX standards<br />-    Understanding of Apple’s design principles and interface guidelines<br />-    Knowledge of low-level C-based libraries is preferred<br />-    Experience with performance and memory tuning with tools such as Instruments and Shark<br />-    Knack for benchmarking and optimization<br />-    Experience with deploying apps to iTunes Connect/Test Flight and apply appropriate fixes in case of App rejection.<br />-    Basic understanding of HTML5, JavaScript, jQuery, Ajax and PHP<br />-    Excellent debugging and optimization skills<br /><br />Bonus Skills (Not Required):<br /><br />-    Understanding and Ability to work on other platforms including Android and Web<br />-    Knowledge of SQLite, SQL Server, MySQL or similar database management system<br /><br />Personal attributes:<br /><br />-    Self-motivated, high ability to develop and progress by himself/herself<br />-    Results oriented<br />-    Process driven<br />-    Excellent personal communication abilities<br />-    High professional standards – Strong motivation for individual and organization success."
+  },
+  {
     "id": "PpzIiFbCTYi7DoRv-M0XZQ",
     "url": "https://stackoverflow.com/jobs/153505/ios-developer-freelance-and-or-remote-job-nearit?a=PtOfW7ADPoY",
     "title": "iOS Developer - freelance and/or remote job at NearIT (Bergamo, Italy) ",
