--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,84 @@
 {
  "items": [
   {
+    "id": "yT10SIGsSRCQcEkZUHIRew",
+    "url": "https://stackoverflow.com/jobs/196598/etcherio-open-source-maintainer-resinio?a=13VPXsNWokPm",
+    "title": "Etcher.io Open-source Maintainer at Resin.io  ",
+    "tags": [
+      "DBG:surround``2N(work, remot) 2N OR(option, allow, abl, possibl, permit)",
+      "DBG:surround``OR(we,team,compani,member,employe,develop,engin,workmat) 2W work W remot",
+      "DBG_TECH1:k/t/w:electron/nodejs/24",
+      "DBG_TECH1:k/t/w:embedded-linux/embedded/8",
+      "DBG_TECH1:k/t/w:embedded/c/1",
+      "DBG_TECH1:k/t/w:embedded/embedded/8",
+      "DBG_TECH1:k/t/w:flash/frontend/8",
+      "DBG_TECH1:k/t/w:node.js/nodejs/26",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=1, mobile=0, go=0, nodejs=50, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=16, frontend=8}",
+      "REMOTE1/50",
+      "TECH1/nodejs",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "nodejs"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 12, 2018 6:30:02 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<h2><span>Etcher.io Open-source Maintainer</span>                </h2>                    <h3>About this job</h3>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Full-time</span>                                    </div>                                    <div>                                        <span>Industry: </span>                                        <span>DevOps, Internet of Things, Software Development</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>11-50 people</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Company type: </span>                                        <span>VC Funded</span>                                    </div>                            </div>                    </div>                <div>Company: Resin.io | No office location<br></div><h3>Technologies</h3><div></div><div>node.js</div><div>electron</div><div>open-source</div><div>embedded-linux</div>                <h3>Job description</h3>                <div><p><strong>On being a Open Source Maintainer at Resin.io</strong></p><p><a href='https://workable.com/nr?l=https%3A%2F%2Fetcher.io%2F' rel='nofollow'>Etcher</a>&nbsp;is one of the most popular open source Electron applications in the world, with millions of users provisioning SD Cards and USB sticks.</p><p>We envision Etcher as a core part of the IoT provisioning and development workflow. Etcher will be able to connect to devices, configure them, and even flash various board and microprocessors.&nbsp;<a href='https://workable.com/nr?l=https%3A%2F%2Fetcher.io%2Fpro%2F' rel='nofollow'>Etcher Pro</a>, a stand-alone hardware version of Etcher, is meant to disrupt the drive duplicator industry.</p><p>We’re looking for a passionate entrepreneurial-minded software engineer to lead Etcher, cooperate with the rest of the product team, and keep growing its community, while assisting the core mission of resin.io, to reduce friction for device fleet owners.<br><br></p><p><strong>Responsibilities&nbsp;</strong></p><ul><li>Actively invest back in our own technology, libraries, and frameworks</li><li>Understand security best practices and strive to apply them in your work</li><li>Be highly motivated to produce great code</li><li>Evaluate customer requirements and other inputs to determine the scope and timing of new functionality</li><li>Lead and grow Etcher's open source community</li><li>Define the Etcher vision and make it a reality</li><li>Coordinate the work of the Etcher team</li></ul><p><strong>REQUIREMENTS</strong></p><p>Need to have:</p><ul><li>Desire to make yourself and others more effective. You'd be bothered by an inefficient process</li><li>Good understanding of software engineering practices and how to apply them</li><li>Excellent written communication skills, and fluency in English</li><li>Self-discipline to take on a project and push it to completion without too much management. You also know when to ask for help</li><li>Strong problem-solving abilities. You know how to split a complex problem into incremental pieces</li><li>Experience leading, or contributing to, open source projects</li><li>Experience with cross-platform development</li><li>Experience with Electron and Node.js</li></ul><p>Nice to have:</p><ul><li>A sample of your work (URL or attached sample)</li><li>Contributions to OSS projects (please include a URL)</li><li>Having worked remotely before</li><li>Experience with Resin.io as a user</li><li>Experience with embedded GNU/Linux, anything ranging from personal projects with a Raspberry Pi to commercial or industrial scenarios with custom devices</li><li>Experience growing a technology business</li></ul><p>Make sure to let us know if any of these items apply to you!</p>                </div>            <div>        <a href='https://resin.workable.com/j/8EF3D158F9' rel='nofollow'>                        Apply now        </a></div>            <h3>About Resin.io</h3>            <div><p><a href='https://resin.io/' rel='nofollow'>Resin.io</a> provides a software platform that helps developers build, deploy and manage the code that runs on connected devices. In short, we make IoT work.</p><p>Our technology is open, standards-based and proven in production across a wide range of scenarios from drones, 3D printers, point-of-sale devices, tidal turbines, skyscrapers and more. Our investors include DFJ, Aspect Ventures, GE, and Ericsson.</p><p>We come from 15+ countries, and we embrace a remote culture with flexible hours. To us, this means being highly productive while still maintaining a healthy work-life balance. You need to be able to work remotely, and have a dependable internet access available so you can join video calls.</p><p>We are an equal opportunity employer and value diversity. We value knowledge and initiative more than educational and personal backgrounds, age, or location. We maintain a work environment in which team members are treated with respect at all times and in which thoughts and ideas can be shared openly.</p><p>We communicate proposals, discuss with others in the team and accept feedback if it makes the result better. We value the ability to learn, which is more important to us than knowledge of specific technologies. We know that learning fast means being outside our comfort zone, which is OK -- we'd rather learn than let our assumptions get in our way.</p>            </div>                            <h3>Benefits</h3>                    <ul>                            <li>                                <span></span>                                <span>Work with extremely talented, distributed team</span>                            </li>                            <li>                                <span></span>                                <span>Work remotely</span>                            </li>                            <li>                                <span></span>                                <span>Flexible working hours</span>                            </li>                            <li>                                <span></span>                                <span>Equipment of your choice</span>                            </li>                            <li>                                <span></span>                                <span>Annual company gathering in an international location</span>                            </li>                            <li>                                <span></span>                                <span>We send you hardware for side projects!</span>                            </li>                    </ul>                "
+  },
+  {
+    "id": "Hv_3hn0PRQCc2proLNTF9g",
+    "url": "http://jobmote.com/jobs/16786-senior-database-consultant-remote-working",
+    "title": "Senior Database Consultant - Remote Working",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``OR(work,oper) 2N 2N( OR(independ,fulli), remot)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 12, 2018 11:21:25 AM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>:Senior Database Consultant - Postrgres - Fully Remote Working<br>This client is looking for the ideal candidate to be able to provide technical leadership on the implementation of Postgres and the design and implementation of large scale technical solutions<br>Essential Skills/Experience:<br>* 5 years' experience as a Postgres..... click apply for full job details </p></div></div><div></div></div></div>"
+  },
+  {
     "id": "yKIkV0OgTH-t7Y3ajWERTQ",
     "url": "https://remote.co/job/auditors-2/",
     "title": "Auditors",
@@ -4707,42 +4785,6 @@
     "published": "May 14, 2018 10:15:44 PM",
     "validThrough": "Jan 1, 1970 3:00:00 AM",
     "content": "<div><h2>City Launcher at Forkable</h2><div>New York City, Remote · Full Time</div></div><div><div>Compensation</div><div>$40K–$80K<br>0.0%–1.5%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Help us bring Forkable to the world! Being a city launcher is like being a serial entrepreneur. You need to be very versatile, with lots of grit, attention to detail, initiative, and resourcefulness. And you should definitely like to travel!</p></div>"
-  },
-  {
-    "id": "b5Nw-pzSRTuMIGSUpRzFog",
-    "url": "http://jobmote.com/jobs/10233-inriver-pim-developer-maintenance-consultant-remote-work-possible",
-    "title": "inRiver PIM Developer / Maintenance Consultant (remote work possible)",
-    "tags": [
-      "DBG:surround``2N(work, remot) 2N OR(option, allow, abl, possibl, permit)",
-      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
-      "REMOTE1/50",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "50% remote",
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "USD",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "May 12, 2018 11:21:37 AM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "inRiver PIM Developer / Maintenance Consultant (remote work possible) - Jobmote<div><div><h2>inRiver PIM Developer / Maintenance Consultant (remote work possible)</h2><h5>comtech europe ltd</h5></div></div><div><div><div><div></div></div><div><div><div><p>For our client we are looking for an inRiver PIM competent developer, my client is based in Finland but remote work is possible from EU with trips required to Finland on occasion.</p><p><strong>Skills Required:</strong></p><ul><li>inRiver PIM Development &amp; Maintenance experience.</li></ul><p><strong>Job Description:</strong></p><p>This assignment is mainly maintenance and some inRiver development work. The team is small and you can work closely with the architect, you should have solid inRiver competence, since the team is small and no inRiver experts are available. </p><p>This is potentially long assignment, but first contract will be done until the end of the year. Please note EU nationals or candidates with EU Visa will be required as trips to Finland will be required.</p><p></p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>"
   }
 ]
 }
